# race-engineer

./: index.html  package.json
.github/workflows/: release.yml
scripts/: gen_icon.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: analytics.rs  lib.rs  parser.rs  telemetry.rs
src/renderer/: App.tsx
src/renderer/components/: DeltaToBest.tsx  DominanceMap.tsx  RadioMessages.tsx  Sidebar.tsx
src/renderer/context/: PrefsContext.tsx  RadioContext.tsx  TelemetryContext.tsx
src/renderer/hooks/: useAutoRadio.ts  useBatteryCoach.ts  useIntelligence.ts  useLapHistory.ts  useReferenceLap.ts  useRivalDominance.ts  useStrategyCalls.ts  useTelemetry.ts
src/renderer/lib/: corner-data.ts  emergency-gate.ts  strategy-pipeline.ts  tauri-api.ts  team-colors.ts  tts-speaker.ts
src/renderer/pages/: AnalysisUI.tsx  BatteryCoachUI.tsx  DashboardUI.tsx  EngineerUI.tsx  OverlayUI.tsx  RivalUI.tsx  SettingsUI.tsx  TimingTowerUI.tsx  TrackMapUI.tsx  VehicleStatusUI.tsx
src/renderer/shared/: race-helpers.js
src/renderer/styles/: index.css
src/shared/intelligence/: ers-coach.ts  pace-analyzer.ts  strategy-engine.ts
src/shared/track-data/: ers-track-data.ts  pit-loss-data.ts
src/shared/types/: packets.ts  store.ts
